# galaxy_ng

./: .bumpversion.cfg  .compose.env  .compose.env.bak  .compose.env.example  .coveragerc  .dockerignore  .flake8  .gitignore  .gitleaks.toml  .readthedocs.yaml  .sonarcloud.properties  .travis.yml  CHANGES.md  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.rhel8  Dockerfile.sync_tests_stage  MANIFEST.IN  MANIFEST.in  Makefile  README.md  ROADMAP.rst  RUN_INTEGRATION.sh  _build_backend.py  _build_commands.py  _dynamic_dependencies.py  aap_compose_dev.yaml  ansible.cfg  build_deploy.sh  call_eph_env_test.py  client_django.py  client_social.py  cloudwatch_requirements.txt  codecov.yml  compose  dev_requirements.txt  django-automated-logging-LICENSE.txt  doc_requirements.txt  docs_requirements.txt  (+21 more)
.ci/: aap_install.groovy  aap_upgrade.groovy
.ci/ansible/: Containerfile.j2  build_container.yaml  smash-config.json  start_container.yaml
.ci/scripts/: calc_deps_lowerbounds.py  changelog.py  check_gettext.sh  check_pulpcore_imports.sh  check_release.py  check_requirements.py  cherrypick.sh  collect_changes.py  extra_linting.sh  get_dab_for_pr.py  redmine.py  tweet.py  update_ci_branches.py  update_redmine.sh  validate_commit_message.py  validate_commit_message_custom.py
.compiled/: insights_compose.yaml
.compiled/ci-standalone/: combined.env  galaxy_ng_base_compose.yaml  init.sh
.github/: CODEOWNERS  labeler.yml  post-job-template.yml.j2  pre-job-template.yml.j2  pull_request_template.md  renovate.json  stale.yml  template_gitref
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/scripts/: compare_openapi_specs.sh  prepare_drift_comment.sh  prepare_schema_change_comment.sh
.github/workflows/: backported-labels.yml  block-prs-to-master.yml  build.yml  build_publish.yml  changelog.yml  ci-docker-compose-integration-extra.yml  ci-docker-compose-integration.yml  ci.yml  ci_automation_hub_collection.yml  ci_automation_hub_collection_dab_jwt.yml  ci_full.yml  ci_gateway.yml  ci_insights.yml  ci_oci-env-integration.yml  ci_standalone-certified-sync.yml  ci_standalone-community.yml  ci_standalone-iqe-rbac-tests.yml  ci_standalone-ldap.yml  ci_standalone-rbac-on-repos.yml  ci_standalone-rbac-roles.yml  ci_standalone-x-repo-search.yml  ci_standalone.yml  ci_standalone_sync.yml  ci_sync.yml  ci_tdd.yml  codeql-analysis.yml  create-branch.yml  galaxy_custom_ci.yml  hardening-check.yml  i18n.yml  jira-reminder.yml  kanban.yml  labeler.yml  lint.yml  main.yml  mirror-main-to-master.yml  nightly.yml  nightly_latest.yml  openapi-spec-drift-detection.yml  openapi_schema_check.yml  (+10 more)
.tekton/: automation-hub-galaxy-ng-main-pull-request.yaml  automation-hub-galaxy-ng-main-push.yaml  automation-hub-galaxy-ng-master-pull-request.yaml  automation-hub-galaxy-ng-master-push.yaml  automation-hub-galaxy-ng-pull-request.yaml  automation-hub-galaxy-ng-push.yaml  run-atf-tests-pull-request.yaml
.travis/: Containerfile.j2  VERSION  before_install.sh  before_script.sh  check_pulpcore_imports.sh  cherrypick.py  custom_check_pull_request.py  func_test_script.sh  generate_python_manifest.py  install.sh  local_test.sh  post_script.sh  pre_before_install.sh  publish_client_gem.sh  publish_client_pypi.sh  publish_plugin_pypi.sh  script.sh  smash-config.json  update_manifest.sh  utils.sh
CHANGES/: .TEMPLATE.md  1015.misc  1018.bugfix  1025.misc  1038.misc  1042.misc  1049.bugfix  105.misc  1055.feature  108.bugfix  1090.misc  1092.misc  1093.misc  1094.bugfix  1095.bugfix  1097.misc  110.bugfix  1103.misc  1106.misc  1118.feature  1127.misc  1128.misc  113.bugfix  1162.bugfix  117.feature  118.misc  1181.feature  1181.misc  1187.bugfix  1188.bugfix  12.bugfix  120.feature  120.misc  1200.bugfix  1202.bugfix  1212.misc  1214.misc  1219.misc  122.bugfix  1243.bugfix  (+424 more)
bindings/: .gitignore  build.sh  openapi.yaml  update.sh
dev/: Dockerfile.base  docker-compose-override.insights.yml  docker-compose-override.standalone.yml  docker-compose.yml  oci_poll  oci_start  oci_test  oci_unit_test
dev/ah_collection_plays/: content.yml  ee.yml  repo.yml  user.yml  vars.yml
dev/automation-hub/: galaxy_ng.env  initial_data.json
dev/common/: DUMP_CONTAINER_ENV_VARS.sh  RUN_FUNCTIONAL.sh  RUN_INTEGRATION.sh  RUN_INTEGRATION_BETA_GALAXY.sh  RUN_INTEGRATION_STAGE.sh  RUN_INTEGRATION_SYNC.sh  RUN_PERFORMANCE.sh  RUN_PERFORMANCE_STAGE.sh  ansible-sign-pub.gpg  ansible-sign-pub.txt  ansible-sign.key  check_pulp_template.sh  collection_sign.sh  container_auth_private_key.pem  container_auth_public_key.pem  container_sign.sh  dependency_bumper.py  docker-compose-ui.yaml  dynaconf_hooks.py  galaxy_ng.env  poll.py  postgres.env  setup_test_data.py  setup_test_users.py  tdd.py
dev/community/: docker-compose.yml  galaxy-importer.cfg  galaxy_ng.env
dev/community_scripts/: cleanup_namespaces.py
dev/compose/: Dockerfile.dev  Dockerfile.nginx  README.md  aap.yaml  certified-sync.yaml  community.yaml  insights.yaml  keycloak.yaml  ldap.yaml  standalone.yaml
dev/data/: README.md  ansible-sign.gpg
dev/docker/: entrypoint.sh
dev/ephemeral/: create_keycloak_users.sh  create_objects.py  create_token.py  fixuser.py  jdoe_pe_group.py  patch_ephemeral.sh  run_tests.sh  smoke_test.sh
dev/galaxy_ansible/: RUN_INTEGRATION_GALAXY_STAGE_ANSIBLE.sh
dev/galaxy_collection_plays/: content.yml  ee.yml  repo.yml  user.yml  vars.yml
docker/: entrypoint.sh
docs/: configuration.md  demo.md  index.md  installation.md
galaxy_ng/: __init__.py  version.py
galaxy_pulp/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi/: openapi.yaml  ui_openapi.yaml
openshift/: database-migration.yaml
pulp_galaxy/: __init__.py
requirements/: constraints.common.txt  constraints.insights.txt  constraints.standalone.txt  requirements.common.txt  requirements.dev.txt  requirements.insights.in  requirements.insights.txt  requirements.shipit.txt  requirements.standalone.in  requirements.standalone.txt  requirements.txt
scripts/: add_signing_service.sh  readyz.py  route_paths.py  wait_on_postgres.py
(+1139 files in other folders)
